# psql-query-exporter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  build.rs  cliff.toml  config.yaml  deny.toml
.github/workflows/: audit.yaml  ci.yaml  coverage.yaml  publish-chart.yaml  publish-image.yaml  publish-release.yaml  test-rust.yaml
assets/: index.html
helm/psql-query-exporter/: Chart.yaml  values.yaml
helm/psql-query-exporter/templates/: _helpers.tpl  config.yaml  deployment.yaml  foldersdata.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/psql-query-exporter/templates/tests/: test-connection.yaml
src/: app_config.rs  cli.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  metrics.rs  scrape_config.rs  test_utils.rs  utils.rs
src/snapshots/: psql_query_exporter__config__tests__scrape_config_parsing__defaults.snap  psql_query_exporter__config__tests__scrape_config_parsing__empty.snap  psql_query_exporter__config__tests__scrape_config_parsing__envs.snap  psql_query_exporter__config__tests__scrape_config_parsing__full.snap  psql_query_exporter__config__tests__scrape_config_parsing__override_defaults.snap  psql_query_exporter__metrics__tests__multi_labels_expired.snap  psql_query_exporter__metrics__tests__multi_labels_original.snap  psql_query_exporter__metrics__tests__multi_labels_updated_1.snap  psql_query_exporter__metrics__tests__multi_labels_updated_2.snap  psql_query_exporter__metrics__tests__multi_suffixes_expired.snap  psql_query_exporter__metrics__tests__multi_suffixes_original.snap  psql_query_exporter__metrics__tests__multi_suffixes_updated_1.snap  psql_query_exporter__metrics__tests__multi_suffixes_updated_2.snap  psql_query_exporter__metrics__tests__single_basic.snap  psql_query_exporter__metrics__tests__single_expired.snap  psql_query_exporter__metrics__tests__single_original.snap  psql_query_exporter__metrics__tests__single_updated_1.snap  psql_query_exporter__metrics__tests__single_updated_2.snap  psql_query_exporter__scrape_config__tests__scrape_config_parsing__empty.snap  psql_query_exporter__scrape_config__tests__scrape_config_parsing__override_defaults.snap
tests/cases/multi_labels/: config.yaml  update_1.sql  update_2.sql
tests/cases/multi_suffixes/: config.yaml  update_1.sql  update_2.sql
tests/cases/single/: config.yaml  update_1.sql  update_2.sql
tests/configs/: defaults.yaml  empty.yaml  envs.yaml  full.yaml
tests/configs/single/: basic.yaml
tests/init/: init_conf.sh  init_db.sql
tests/scripts/: create-test-certificates.sh  openssl.cnf
