[package]
name = "psql-query-exporter"
version = "0.3.3"
edition = "2024"
authors = ["Oleksii Karpenko <alexkarpenko@yahoo.com>"]
description = "PostgreSQL Query Prometheus exporter"
repository = "https://github.com/alex-karpenko/psql-query-exporter"
license = "MIT OR Apache-2.0"
keywords = ["postgres", "postgresql", "prometheus", "exporter"]

[dependencies]
axum = { version = "0.8.8", default-features = false, features = ["tokio", "http1"] }
clap = { version = "4.5.58", features = ["derive"] }
envsubst = "0.2.1"
human-repr = "1.1.0"
humantime-serde = "1.1.1"
openssl = "0.10.75"
openssl-sys = "0.9.111"
postgres-openssl = "0.5.2"
prometheus = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-postgres = "0.7.16"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
reqwest = { version = "0.13.2", default-features = false }
rstest = "0.26.1"
testcontainers = { version = "0.27.0", features = ["blocking"] }
